Refactor
Move out the System.out.println() from TVFeed to Main, and provide it to
TVFeed in the form of a Consumer<String>.